2006-09-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.5.0.

	* configure.ac: Mise à jour de la version.

2006-09-11  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* m4/expat.m4: Corrections de bug dans les flags passés au compilateur
	si l'utilisateur précise --with-expat=DIR.

2006-09-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* ebin/charon.app.in: On ajoute $Id$ pour l'id de l'application.

2006-09-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.7.

	* src/exmpp_factory.erl: Correction de la documentation.

	* src/exmpp_xml.erl (load_driver): Correction d'un bug avec le
	chargement de la librairie. En fait, il faut charger la librairie
	autant de fois que open_port est appelé car erl_ddll maintient un
	comptage de référence. C'est pour cette raison qu'avec les version
	précédentes de `exmpp_xml', tous les parsers instanciés étaient
	détruits avec le premier appel à `stop_parser'.

	* c_src/expat_drv.c (expat_drv_stop): Le `return' final est
	complètement inutile.
	(expat_drv_control): En cas de commande inconnue, on retourne `{error,
	badarg}' au lieu de `badarg'.

2006-08-31  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.6.

	* include/exmpp.hrl: Ajout du namespace utilisé pour les erreurs au
	niveau stream.

	* src/exmpp_factory.erl (stream_error): Nouvelle fonction pour générer
	les erreurs au niveau stream.

2006-08-29  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Release 0.4.5.

	* configure.ac: Ajout de flags de compilation Erlang pour avoir un
	maximum de warnings.

	* src/xml.erl: Correction de la documenation pour que les fonctions
	obsolètes pointent vers `exmpp_xml'.
	(get_cdata, remove_cdata): Rajout de deux fonctions qui avaient été
	supprimées avec la séparation `exmpp_xml'/`xml'.

	* src/exmpp_xml.erl: Correction de la documentation.
	(replace_child): Nouvelle fonction pour remplacer le fils d'un élément
	XML.